--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,28 +7,7 @@ on:
     branches:
       - main
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.19.x
-          check-latest: true
-          cache: true
-      - uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-  unit:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: [1.19.x, 1.20.x]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go-version }}
-          check-latest: true
-          cache: true
-      - run: make test bench
+  main:
+    uses: bsm/misc/.github/workflows/test-go.yml@main
+    with:
+      working-directory: .
